# aipi-590-escape-room-puzzle-

./: Puzzle2_feedback.py  README.md  pyproject.toml  requirements.txt
hardware/: WIRING.md
puzzles/: Puzzle2_config  Puzzle2_game.py  Puzzle2_keypad.py  Puzzle2_main.py  Puzzle2_motor.py  example_plan.json
schema/: puzzle.schema.json
src/truth_matrix/: __init__.py  __main__.py  config.py  constants.py  display.py  evaluator.py  game.py  gpio_controller.py  hints.py  llm_author.py  validator.py
